; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_fourcc.c_vlc_fourcc_GetCodecFromString.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_fourcc.c_vlc_fourcc_GetCodecFromString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_fourcc_GetCodecFromString(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @strlen(i8* %9)
  %11 = icmp ne i32 %10, 4
  br i1 %11, label %12, label %13

12:                                               ; preds = %8, %2
  store i32 0, i32* %3, align 4
  br label %29

13:                                               ; preds = %8
  %14 = load i32, i32* %4, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 0
  %17 = load i8, i8* %16, align 1
  %18 = load i8*, i8** %5, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 1
  %20 = load i8, i8* %19, align 1
  %21 = load i8*, i8** %5, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 2
  %23 = load i8, i8* %22, align 1
  %24 = load i8*, i8** %5, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 3
  %26 = load i8, i8* %25, align 1
  %27 = call i32 @VLC_FOURCC(i8 signext %17, i8 signext %20, i8 signext %23, i8 signext %26)
  %28 = call i32 @vlc_fourcc_GetCodec(i32 %14, i32 %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %13, %12
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @vlc_fourcc_GetCodec(i32, i32) #1

declare dso_local i32 @VLC_FOURCC(i8 signext, i8 signext, i8 signext, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
